# InformationTechnologyCorporate

./: .gitignore  README.md  pyproject.toml
common/utilities/: argument_parser.py  config_loader.py  configuration_keys.py  large_xls_splitter.py  logger.py  xls_splitter.py  xls_splitter_large.py
common/xlsx/: large_xlsx_splitter_utils.py  xlsx_splitter_utils.py
docs/internal/: eam_asset_management.md  keywords.md
service_xlsx_splitter/: config.json  main.py  subroutines.py
