[tool.poetry]
name = "training"
version = "0.1.0"
description = "A training repo"
authors = ["gianmarcobencivenni <gianmarco.bencivenni@raiway.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
