[tool.poetry]
name = "training"
version = "0.1.0"
description = "A training repo"
authors = ["gianmarcobencivenni <gianmarco.bencivenni@raiway.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
